--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                         <a href="#investment" class="btn btn-light btn-lg me-3 mb-3">
                             <i class="fas fa-chart-line me-2"></i>מידע על השקעה
                         </a>
-                        <a href="https://t.me/ICQ2_bot" class="btn btn-outline-light btn-lg mb-3" target="_blank">
+                        <a href="https://t.me/E71sSHOP_bot" class="btn btn-outline-light btn-lg mb-3" target="_blank">
                             <i class="fab fa-telegram me-2"></i>התחל בבוט
                         </a>
                     </div>
