--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                     <li class="nav-item"><a class="nav-link" href="#roadmap">לו"ז</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">צור קשר</a></li>
                     <li class="nav-item">
-                        <a class="btn btn-primary btn-sm ms-2" href="https://t.me/ICQ2_bot" target="_blank">
+                        <a class="btn btn-primary btn-sm ms-2" href="hhttps://t.me/E71sSHOP_bot" target="_blank">
                             <i class="fab fa-telegram me-1"></i> התחל עכשיו
                         </a>
                     </li>
@@ -827,7 +827,7 @@
                         </div>
                         <div class="text-center">
                             <p class="text-muted mb-3">65% מהיעד גויס • $2.6M / $4M</p>
-                            <a href="https://t.me/ICQ2_bot" class="btn btn-primary btn-lg me-3" target="_blank">
+                            <a href="https://t.me/E71sSHOP_bot" class="btn btn-primary btn-lg me-3" target="_blank">
                                 <i class="fab fa-telegram me-2"></i>התחל השקעה
                             </a>
                             <a href="#contact" class="btn btn-outline-primary btn-lg">
@@ -1014,7 +1014,7 @@
                         השקעות מ-10,000 ש"ח עם פוטנציאל תשואה משמעותי וצמיחה מואצת.
                     </p>
                     <div class="cta-buttons">
-                        <a href="https://t.me/ICQ2_bot" class="btn btn-light btn-lg me-3 mb-3" target="_blank">
+                        <a href="https://t.me/E71sSHOP_bot" class="btn btn-light btn-lg me-3 mb-3" target="_blank">
                             <i class="fab fa-telegram me-2"></i>התחל עכשיו בבוט
                         </a>
                         <a href="#investment" class="btn btn-outline-light btn-lg mb-3">
@@ -1042,7 +1042,7 @@
                                 <i class="fab fa-telegram fa-3x text-primary mb-3"></i>
                                 <h5>טלגרם</h5>
                                 <p>@ICQ2_bot</p>
-                                <a href="https://t.me/ICQ2_bot" class="btn btn-outline-primary btn-lg" target="_blank">
+                                <a href="https://t.me/E71sSHOP_bot" class="btn btn-outline-primary btn-lg" target="_blank">
                                     <i class="fab fa-telegram me-2"></i>פתח צ'אט בבוט
                                 </a>
                             </div>
@@ -1069,7 +1069,7 @@
                     </h5>
                     <p class="fs-6">אקוסיסטם דיגיטלי חדשני המשלב AI, בלוקצ'יין וכלכלה חברתית ליצירת העתיד הכלכלי הבא. ניהול חכם, צמיחה מואצת ותשואה משמעותית.</p>
                     <div class="social-links mt-4">
-                        <a href="https://t.me/ICQ2_bot" class="social-link" target="_blank">
+                        <a href="hhttps://t.me/E71sSHOP_bot" class="social-link" target="_blank">
                             <i class="fab fa-telegram"></i>
                         </a>
                         <a href="#" class="social-link">
@@ -1108,7 +1108,7 @@
                     <ul class="list-unstyled">
                         <li class="mb-3">
                             <i class="fab fa-telegram me-2 text-primary"></i>
-                            <a href="https://t.me/ICQ2_bot" class="text-decoration-none" target="_blank">@ICQ2_bot</a>
+                            <a href="hhttps://t.me/E71sSHOP_bot" class="text-decoration-none" target="_blank">@ICQ2_bot</a>
                         </li>
                         <li class="mb-3">
                             <i class="fas fa-envelope me-2 text-primary"></i>
